<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_account"
        android:enabled="true"
        android:icon="@drawable/login"
        android:title="@string/connexion"/>
    <item
        android:id="@+id/menu_item_moon"
        android:enabled="true"
        android:icon="@drawable/parametre"
        android:title="@string/parametre"/>
    <item
        android:id="@+id/menu_item_map"
        android:enabled="true"
        android:icon="@drawable/map"
        android:title="@string/map"/>
    <item
        android:id="@+id/menu_item_time"
        android:enabled="true"
        android:icon="@drawable/edit"
        android:title="@string/sensor"/>
    <item
        android:id="@+id/menu_item_client"
        android:enabled="true"
        android:icon="@drawable/people"
        android:title="@string/client"/>

    <item
        android:id="@+id/menu_item_photo"
        android:enabled="true"
        android:icon="@drawable/photo"
        android:title="@string/Photo"/>

    <item
        android:id="@+id/menu_item_description"
        android:enabled="true"
        android:icon="@drawable/description"
        android:title="@string/Description"/>

</menu>