<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="348dp"
        android:layout_height="456dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        app:srcCompat="@drawable/appsplash" />

    <Button
        android:id="@+id/buttonLoc"
        android:contentDescription="@string/pageLocalisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Localisation"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="@id/logo"
        app:layout_constraintRight_toRightOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintVertical_bias="1.300"
        />


    <Button
        android:id="@+id/buttonhist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:contentDescription="@string/Recycle"
        android:text="@string/Historique"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@id/logo"
        app:layout_constraintRight_toRightOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintVertical_bias="0.8" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parametre" />


</androidx.constraintlayout.widget.ConstraintLayout>